--- a/3_zadanie/index.html
+++ b/3_zadanie/index.html
@@ -28,19 +28,17 @@
 <div class="bodycontent">
 	<div class="sidebar">
 		<ul>
-			<li><a href="#">Ноутбуки</a></li>
-			<li><a href="#">Планшеты</a></li>
+			<li class="sidebaractive"><a href="#">Ноутбуки</a></li>
+			<li class="sidebaractive"><a href="#">Планшеты</a></li>
 			<li class="sidebaractive"><a href="#">Телефоны</a></li>
-			<li><a href="#">Телевизоры</a></li>
-			<li><a href="#">Бытовая техника</a></li>
-			<li><a href="#">Автотовары</a></li>
+			<li class="sidebaractive"><a href="#">Телевизоры</a></li>
+			<li class="sidebaractive"><a href="#">Бытовая техника</a></li>
+			<li class="sidebaractive"><a href="#">Автотовары</a></li>
 		</ul>
 	</div>
 	<div class="content">
 		<div class="contentimg">
-			<a href="https://www.google.com">
-		       <img src="img/bike.jpg" alt="Bike img">
-	    	</a>
+			<img class="bike" src="img/bike.jpg" alt="Bike img">
 		</div>
 		<div class="contenttxt">
 			<p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
@@ -51,10 +49,10 @@
 <div class="footer">
 	<nav>
         <ul>
-            <li><a href="#">Главная</a></li>
+            <li><a class="borderbottom" href="#">Главная</a></li>
             <li><a class="borderbottom" href="#">Товары</a></li>
-            <li><a href="#">О_нас</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a class="borderbottom" href="#">О_нас</a></li>
+            <li><a class="borderbottom" href="#">Контакты</a></li>
             <li class="rights"><a class="rights" href="#">2014 © All rights reserved</a></li>
         </ul>
 	</nav>
