--- a/4_zadanie/index.html
+++ b/4_zadanie/index.html
@@ -32,36 +32,39 @@
 		<div class="headerimg"> <!-- картинка с пальмами -->
 			<img src="img/headerimg.jpg" alt="Palm">
 		</div>
-		<div class="topmenu">  <!-- выпадающая менюшка -->
-			<ul class="menu"></ul>
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Путешествие</a></li>
-					<ul class="submenu">
-						<li><a href="#">Путешествие1</a></li>
-						<li><a href="#">Путешествие2</a></li>
-						<li><a href="#">Путешествие3</a></li>
-						<li><a href="#">Путешествие4</a></li>
-						<li><a href="#">Путешествие5</a></li>
-					</ul>
-				<li><a href="#">Услуги</a></li>
-					<ul class="submenu">
-						<li><a href="#">Услуги1</a></li>
-						<li><a href="#">Услуги2</a></li>
-						<li><a href="#">Услуги3</a></li>
-						<li><a href="#">Услуги4</a></li>
-						<li><a href="#">Услуги5</a></li>
-					</ul>
-				<li><a href="#">Партнерам</a></li>
-					<ul class="submenu">
-						<li><a href="#">Партнерам1</a></li>
-						<li><a href="#">Партнерам2</a></li>
-						<li><a href="#">Партнерам3</a></li>
-						<li><a href="#">Партнерам4</a></li>
-						<li><a href="#">Партнерам5</a></li>
-					</ul>
-				<li><a href="#">Отзывы клиентов</a></li>
-				<li><a href="#">О нас</a></li>
-				<li><a href="#">Контакты</a></li>
+		<div class="topmenu">
+			<ul class="menu">
+			    <li><a href=#>Главная</a></li>
+			    <li><a href=#>Путешествие</a>
+			        <ul class="submenu">
+			            <li><a href=#>Путешествие 1</a></li>
+			            <li><a href=#>Путешествие 2</a></li>
+			            <li><a href=#>Путешествие 3</a></li>
+			            <li><a href=#>Путешествие 4</a></li>
+			            <li><a href=#>Путешествие 5</a></li>
+			        </ul>
+			    </li>
+			    <li><a href=#>Услуги</a>
+			        <ul class="submenu">
+			            <li><a href=#>Услуги 1</a></li>
+			            <li><a href=#>Услуги 2</a></li>
+			            <li><a href=#>Услуги 3</a></li>
+			            <li><a href=#>Услуги 4</a></li>
+			            <li><a href=#>Услуги 5</a></li>
+			        </ul>
+			    </li>
+			    <li><a href=#>Партнерам</a>
+			        <ul class="submenu">
+			            <li><a href=#>Партнерам 1</a></li>
+			            <li><a href=#>Партнерам 2</a></li>
+			            <li><a href=#>Партнерам 3</a></li>
+			            <li><a href=#>Партнерам 4</a></li>
+			            <li><a href=#>Партнерам 5</a></li>
+			        </ul>
+			    </li>
+			    <li><a href=#>Отзывы клиентов</a></li>
+			    <li><a href=#>О нас</a></li>
+			    <li><a href=#>Контакты</a></li>
 			</ul>
 		</div>
 		<div class="columns"> <!-- блок родитель для колонок -->
