--- a/4_zadanie/index.html
+++ b/4_zadanie/index.html
@@ -13,7 +13,7 @@
 				<a href="#"><img src="img/logo.jpg" alt="Logo Asia-Holidays"></a>
 			</div>
 			<div class="contacts">
-				<p>Наши контакты:</p>
+				<h5>Наши контакты:</h5>
 				<p>+9-098-765-4321</p>
 				<p>+9-0123-456-890</p>
 				<p>info@asia-holidays.com</p>
@@ -35,7 +35,7 @@
 		<div class="topmenu">
 			<ul class="menu">
 			    <li><a href=#>Главная</a></li>
-			    <li><a href=#>Путешествие</a>
+			    <li><a href=#>Путешествие<img src="img/white_triangles.png" alt="triangles"></a>
 			        <ul class="submenu">
 			            <li><a href=#>Путешествие 1</a></li>
 			            <li><a href=#>Путешествие 2</a></li>
@@ -44,7 +44,7 @@
 			            <li><a href=#>Путешествие 5</a></li>
 			        </ul>
 			    </li>
-			    <li><a href=#>Услуги</a>
+			    <li><a href=#>Услуги<img src="img/white_triangles.png" alt="triangles"></a>
 			        <ul class="submenu">
 			            <li><a href=#>Услуги 1</a></li>
 			            <li><a href=#>Услуги 2</a></li>
@@ -53,7 +53,7 @@
 			            <li><a href=#>Услуги 5</a></li>
 			        </ul>
 			    </li>
-			    <li><a href=#>Партнерам</a>
+			    <li><a href=#>Партнерам<img src="img/white_triangles.png" alt="triangles"></a>
 			        <ul class="submenu">
 			            <li><a href=#>Партнерам 1</a></li>
 			            <li><a href=#>Партнерам 2</a></li>
@@ -70,7 +70,7 @@
 		<div class="columns"> <!-- блок родитель для колонок -->
 			<div class="sidebarleft"> <!-- левое меню Информация -->
 				<div class="wrapperlc">
-					<h5>Информация</h5> <!-- ???или увеличить размер + bold?? -->
+					<h5>Информация</h5> 
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
@@ -81,11 +81,11 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
 				</div>
 			</div>
-			<div class="content"> <!-- центральная пустая часть --> <!-- растянуть по вертикали!!!! -->
+			<div class="content"> <!-- центральная пустая часть -->
 			</div>
-			<div class="sidebarright"> <!-- правая менюшка Новости -->
+			<div class="sidebarright"> <!-- правая колонка Новости -->
 				<div class="wrapperrc">
-					<h5>Новости</h5> <!-- ???или увеличить размер + bold?? -->
+					<h5>Новости</h5> 
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
