--- a/4_zadanie/index.html
+++ b/4_zadanie/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div class="header"> <!-- панель с лого и контактами-->
+		<header><!-- панель с лого и контактами-->
 			<div class="logo">
 				<a href="#"><img src="img/logo.jpg" alt="Logo Asia-Holidays"></a>
 			</div>
@@ -28,7 +28,7 @@
 					<li><a href="#"><img src="img/flag_maldives.jpg" alt="Flag Maldives">Мальдивы</a></li>
 				</ul>
 			</div>
-		</div>
+		</header>
 		<div class="headerimg"> <!-- картинка с пальмами -->
 			<img src="img/headerimg.jpg" alt="Palm">
 		</div>
@@ -111,8 +111,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">
+	<footer>
 		<p>Copyright(C) asia-holidays.com. 2010</p>
-	</div>
+	</footer>
 </body>
 </html>
