flags in sprite

--- a/4_zadanie/index.html
+++ b/4_zadanie/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
 	<div class="wrapper">
-		<header><!-- панель с лого и контактами-->
+		<header>
 			<div class="logo">
 				<a href="#"><img src="img/logo.jpg" alt="Logo Asia-Holidays"></a>
 			</div>
 			<div class="contacts">
 				<h5>Наши контакты:</h5>
-				<p>+9-098-765-4321</p>
-				<p>+9-0123-456-890</p>
-				<p>info@asia-holidays.com</p>
+				<a href="#"><p>+9-098-765-4321</p></a>
+				<a href="#"><p>+9-0123-456-890</p></a>
+				<a href="#"><p>info@asia-holidays.com</p></a>
 			</div>
 			<div class="flag">
 				<ul>
-					<li><a href="#"><img src="img/flag_india.jpg" alt="Flag India">Индия</a></li>
-					<li><a href="#"><img src="img/flag_nepal.jpg" alt="Flag Nepal">Непал</a></li>
-					<li><a href="#"><img src="img/flag_tibet.jpg" alt="Flag Tibet">Тибет</a></li>
-					<li><a href="#"><img src="img/flag_bhutan.jpg" alt="Flag Bhutan">Бутан</a></li>
-					<li><a href="#"><img src="img/flag_sri-lanka.jpg" alt="Flag Sri-Lanka">Шри-Ланка</a></li>
-					<li><a href="#"><img src="img/flag_maldives.jpg" alt="Flag Maldives">Мальдивы</a></li>
-				</ul>
+					<li><a href="#"><div class="india"></div><div>Индия</div></a></li>
+					<li><a href="#"><div class="nepal"></div><div>Непал</div></a></li>
+					<li><a href="#"><div class="tibet"></div><div>Тибет</div></a></li>
+					<li><a href="#"><div class="bhutan"></div><div>Бутан</div></a></li>
+					<li><a href="#"><div class="srilanka"></div><div>Шри-Ланка</div></a></li>
+					<li><a href="#"><div class="maldives"></div><div>Мальдивы</div></a></li>
+				</ul>	
 			</div>
 		</header>
-		<div class="headerimg"> <!-- картинка с пальмами -->
+		<div class="headerimg"> 
 			<img src="img/headerimg.jpg" alt="Palm">
 		</div>
 		<div class="topmenu">
@@ -67,8 +67,8 @@
 			    <li><a href=#>Контакты</a></li>
 			</ul>
 		</div>
-		<div class="columns"> <!-- блок родитель для колонок -->
-			<div class="sidebarleft"> <!-- левое меню Информация -->
+		<div class="columns"> 
+			<div class="sidebarleft"> 
 				<div class="wrapperlc">
 					<h5>Информация</h5> 
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
@@ -81,9 +81,9 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
 				</div>
 			</div>
-			<div class="content"> <!-- центральная пустая часть -->
+			<div class="content"> 
 			</div>
-			<div class="sidebarright"> <!-- правая колонка Новости -->
+			<div class="sidebarright"> 
 				<div class="wrapperrc">
 					<h5>Новости</h5> 
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus explicabo repudiandae repellat inventore neque expedita, tempora odit, amet ullam illo distinctio, et animi aut id facilis quo eligendi. Cupiditate, perspiciatis.</p>
