--- a/5_zadanie/index.html
+++ b/5_zadanie/index.html
@@ -33,16 +33,16 @@
 				<td colspan="2">6.6</td>
 			</tr>
 			<tr>
-				<td id="yellow" rowspan="3">7.1</td>
+				<td class="width" id="yellow" rowspan="3">7.1</td>
 				<td colspan="2">7.4</td>
 				<td id="blue"colspan="2" rowspan="2">7.6</td>
 			</tr>
 			<tr>
 				<td colspan="2" rowspan="2">8.2.</td>
-				<td id="black" colspan="2">8.4</td>
+				<td class="height" id="black" colspan="2">8.4</td>
 			</tr>
 			<tr>
-				<td colspan="4">9.4</td>
+				<td class="height" colspan="4">9.4</td>
 			</tr>
 		</table>
 	</div>
