--- a/5_zadanie/picture/index.html
+++ b/5_zadanie/picture/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Art</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../picture/style.css">
 </head>
 <body>
 	<div class="wrapper">
