--- a/5_zadanie/cadastre/index.html
+++ b/5_zadanie/cadastre/index.html
@@ -26,6 +26,24 @@
 		<div class="cadastre">
 			<p>Cadastre-se</p>
 		</div>
+		<div class="form">
+			<form action=# method="post">
+				<button type="submit">
+					<p>f<img class="line" src="../cadastre/img/button_line.png"></p><p><strong>Log In </strong>with <strong>Facebook</strong></p>
+				</button>
+				<div>
+					<fieldset>
+					<legend>OU</legend>
+					<p><input type="text" name="first_name" placeholder="First Name" required></p>
+					<p><input type="text" name="last_name" placeholder="Last Name" required></p>
+					<p><input type="email" name="email" placeholder="Email Address" required></p>
+					<p><input type="password" name="password" placeholder="Choose Password" required></p>
+					<p><input type="password" name="password_confirm" placeholder="Password Confirm" required></p>
+
+				</fieldset>
+				</div>
+			</form>
+		</div>
 	</div>
 </body>
 </html>
