--- a/5_zadanie/cadastre/index.html
+++ b/5_zadanie/cadastre/index.html
@@ -12,13 +12,14 @@
 			<div class="topmenu">
 				<nav>
 		            <ul>
-		                <li><a href="#">Meu YouBike</a></li>
+		                <li><a class="firstchild" href="#">Meu YouBike</a></li>
 		                <li class="active"><a chref="#">Vender</a></li>
-		                <li><a href="#">Forum</a></li>
-		                <li><a href="#">Contato</a></li>
-		                <li><a href="#">Ajuda<img src="../cadastre/img/line.png" alt="line"></a></li>
-		                <li><a href="#"><img src="../cadastre/img/flag.png" alt="flag">Minhas Ofertas</a></li>
-		                <li><p>Ola!<a href="#">Entrar</a>ou<a href="#">Cadastre-se</a></p></li>
+		                <li><a class="firstchild" href="#">Forum</a></li>
+		                <li><a class="firstchild" href="#">Contato</a></li>
+		                <li><a class="firstchild" href="#">Ajuda</li>
+		                <li><div class="line"></div></li>
+		                <li><a class="firstchild" href="#"><img src="../cadastre/img/flag.png" alt="flag">Minhas Ofertas</a></li>
+		                <li><p>Ola!<a class="lastchild" href="#">Entrar</a>ou<a class="lastchild" href="#">Cadastre-se</a></p></li>
 		            </ul>
 				</nav>
 			</div>
