--- a/5_zadanie/cadastre/index.html
+++ b/5_zadanie/cadastre/index.html
@@ -30,7 +30,7 @@
 		<div class="form">
 			<form action=# method="post">
 				<button class="fb" type="submit">
-					<p>f<img class="line" src="../cadastre/img/button_line.png"></p><p><strong>Log In </strong>with <strong>Facebook</strong></p>
+					<p><strong>Log In </strong>with <strong>Facebook</strong><img class="arrow" src="../cadastre/img/arrow.png"></p>
 				</button>
 				<div>
 					<fieldset>
@@ -49,7 +49,7 @@
 				</div>
 				<div class="privacy">
 					<p>By clicking the button above, you agree to the Terms of Service</p>
-					<p>Xiew our Privacy Policy.</p>
+					<p>View our Privacy Policy.</p>
 				</div>
 			</form>
 		</div>
