--- a/6_zadanie/index.html
+++ b/6_zadanie/index.html
@@ -65,7 +65,47 @@
 		</div>
 		<div class="content"> <!-- =columns HW4 -->
 			<aside class="left">
-				
+				<div class="catalog">
+					<div class="img">
+						<img src="img/iconbrand.png">
+					</div> КАТАЛОГ ПРОДУКЦИИ:
+				</div>
+				<div class="radio">
+					<input type="radio" id="tires" name="tires">
+					<label for="tires">ШИНЫ</label>
+				</div>
+				<div class="name">
+					<ul>
+						<li><a href="№">Наменование 1</a></li>
+						<li><a href="№">Наменование 2</a></li>
+						<li><a href="№">Наменование 3</a></li>
+						<li><a href="№">Наменование 4</a></li>
+					</ul>
+				</div>
+				<div class="radio">
+					<input type="radio" id="disc" name="disc">
+					<label for="disc">ДИСКИ</label>
+				</div>
+				<div class="name">
+					<ul>
+						<li><a href="№">Наменование 1</a></li>
+						<li><a href="№">Наменование 2</a></li>
+						<li><a href="№">Наменование 3</a></li>
+						<li><a href="№">Наменование 4</a></li>
+					</ul>
+				</div>
+				<div class="radio">
+					<input type="radio" id="bolts" name="bolts">
+					<label for="bolts">БОЛТЫ</label>
+				</div>
+				<div class="name">
+					<ul>
+						<li><a href="№">Наменование 1</a></li>
+						<li><a href="№">Наменование 2</a></li>
+						<li><a href="№">Наменование 3</a></li>
+						<li><a href="№">Наменование 4</a></li>
+					</ul>	
+				</div>
 			</aside>	
 			<div class="bodycontent">
 				
