--- a/6_zadanie/index.html
+++ b/6_zadanie/index.html
@@ -108,7 +108,66 @@
 				</div>
 			</aside>	
 			<div class="bodycontent">
-				
+				<div class="contentcolumns">	
+					<div class="cells">
+						<p class="name">Goodyear</p>
+						<p class="model">Ultra Grip Extreme</p>
+						<img src="img/tire1.png" alt="Goodyear">
+						<p class="price">90.00 грн.</p>
+					</div>
+					<div class="cells">
+						<p class="name">Goodyear</p>
+						<p class="model">Ultra Grip Extreme</p>
+						<img src="img/tire1.png" alt="Goodyear">
+						<p class="price">90.00 грн.</p>
+					</div>
+					<div class="cells">
+						<p class="name">Goodyear</p>
+						<p class="model">Ultra Grip Extreme</p>
+						<img src="img/tire1.png" alt="Goodyear">
+						<p class="price">90.00 грн.</p>
+					</div>
+				</div>
+				<div class="contentcolumns">
+					<div class="cells">
+						<p class="name">Nokian</p>
+						<p class="model">Hakkapeliitta R</p>
+						<img src="img/tire2.png" alt="Nokian">
+						<p class="price">115.00 грн.</p>
+					</div>
+					<div class="cells">
+						<p class="name">Nokian</p>
+						<p class="model">Hakkapeliitta R</p>
+						<img src="img/tire2.png" alt="Nokian">
+						<p class="price">115.00 грн.</p>
+					</div>
+					<div class="cells">
+						<p class="name">Nokian</p>
+						<p class="model">Hakkapeliitta R</p>
+						<img src="img/tire2.png" alt="Nokian">
+						<p class="price">115.00 грн.</p>
+					</div>
+				</div>
+				<div class="contentcolumns">
+					<div class="cells">
+						<p class="name">Hankook</p>
+						<p class="model">K 708 155/65 R14</p>
+						<img src="img/tire3.png" alt="Hankook">
+						<p class="price">393.00 грн.</p>
+					</div>
+					<div class="cells">
+						<p class="name">Hankook</p>
+						<p class="model">K 708 155/65 R14</p>
+						<img src="img/tire3.png" alt="Hankook">
+						<p class="price">393.00 грн.</p>
+					</div>
+					<div class="cells">
+						<p class="name">Hankook</p>
+						<p class="model">K 708 155/65 R14</p>
+						<img src="img/tire3.png" alt="Hankook">
+						<p class="price">393.00 грн.</p>
+					</div>
+				</div>
 			</div>
 			<aside class="right">
 				
@@ -119,12 +178,17 @@
 				<img src="img/spritelogo.png" alt="logo">
 			</div>
 			<div class="navigation">
-				<nav>
-					<a href="#">О компании</a> | <a href="#">Доставка</a> | <a href="#">Статьи</a> | <a href="#">Контакты</a>
+				<nav class="footermenu">
+					<p><a href="#">О компании</a> | </p>
+					<p><a href="#">Доставка</a> | </p>
+					<p><a href="#">Статьи</a> | </p>
+					<p><a href="#">Контакты</a></p>
 				</nav>
-				<p>Создание сайта © Global Vision</p>
+				<p class="rights">Создание сайта © Global Vision</p>
 			</div>
 		</footer>
 	</div>
 </body>
 </html>
+
+<p><a href="#">вход</a> |</p>
