--- a/6_zadanie/index.html
+++ b/6_zadanie/index.html
@@ -68,7 +68,7 @@
 				<div class="catalog">
 					<div class="img">
 						<img src="img/iconbrand.png">
-					</div> КАТАЛОГ ПРОДУКЦИИ:
+					</div>КАТАЛОГ ПРОДУКЦИИ:
 				</div>
 				<div class="radio">
 					<input type="radio" id="tires" name="tires">
@@ -170,7 +170,35 @@
 				</div>
 			</div>
 			<aside class="right">
-				
+				<div class="catalog">
+					<div class="img">
+						<img src="img/iconbrand.png">
+					</div>БРЕНДЫ:
+				</div>
+				<div class="radio">
+					<input type="radio" id="tires" name="tires">
+					<label for="tires">ШИНЫ</label>
+				</div>
+				<div class="name">
+					<ul>
+						<li><a href="№">Наменование 1</a></li>
+						<li><a href="№">Наменование 2</a></li>
+						<li><a href="№">Наменование 3</a></li>
+						<li><a href="№">Наменование 4</a></li>
+					</ul>
+				</div>
+				<div class="radio">
+					<input type="radio" id="disc" name="disc">
+					<label for="disc">ДИСКИ</label>
+				</div>
+				<div class="name">
+					<ul>
+						<li><a href="№">Наменование 1</a></li>
+						<li><a href="№">Наменование 2</a></li>
+						<li><a href="№">Наменование 3</a></li>
+						<li><a href="№">Наменование 4</a></li>
+					</ul>
+				</div>
 			</aside>
 		</div>
 		<footer>
