--- a/6_zadanie/index.html
+++ b/6_zadanie/index.html
@@ -67,12 +67,13 @@
 			<aside class="left">
 				<div class="catalog">
 					<div class="img">
-						<img src="img/iconbrand.png">
-					</div>КАТАЛОГ ПРОДУКЦИИ:
+						<a href="#" class="iconbrand">КАТАЛОГ ПРОДУКЦИИ:</a>
+					</div>
 				</div>
 				<div class="radio">
-					<input type="radio" id="tires" name="tires">
-					<label for="tires">ШИНЫ</label>
+					<div class="imgradio">
+						<a href="#" class="radio">ШИНЫ</a>
+					</div>
 				</div>
 				<div class="name">
 					<ul>
@@ -83,8 +84,9 @@
 					</ul>
 				</div>
 				<div class="radio">
-					<input type="radio" id="disc" name="disc">
-					<label for="disc">ДИСКИ</label>
+					<div class="imgradio">
+						<a href="#" class="radio">ДИСКИ</a>
+					</div>
 				</div>
 				<div class="name">
 					<ul>
@@ -95,8 +97,9 @@
 					</ul>
 				</div>
 				<div class="radio">
-					<input type="radio" id="bolts" name="bolts">
-					<label for="bolts">БОЛТЫ</label>
+					<div class="imgradio">
+						<a href="#" class="radio">БОЛТЫ</a>
+					</div>
 				</div>
 				<div class="name">
 					<ul>
@@ -172,33 +175,36 @@
 			<aside class="right">
 				<div class="catalog">
 					<div class="img">
-						<img src="img/iconbrand.png">
-					</div>БРЕНДЫ:
+						<a href="#" class="iconbrand">БРЕНДЫ:</a>
+					</div>
 				</div>
 				<div class="radio">
-					<input type="radio" id="tires" name="tires">
-					<label for="tires">ШИНЫ</label>
+					<div class="imgradio">
+						<a href="#" class="radio">ШИНЫ</a>
+					</div>
 				</div>
 				<div class="name">
-					<ul>
-						<li><a href="№">Наменование 1</a></li>
-						<li><a href="№">Наменование 2</a></li>
-						<li><a href="№">Наменование 3</a></li>
-						<li><a href="№">Наменование 4</a></li>
-					</ul>
+					<input type="checkbox" id="checkbox">
+					<label for="checkbox">Бренд 1</label>
+					<input type="checkbox" id="checkbox">
+					<label for="checkbox">Бренд 2</label>
+					<input type="checkbox" id="checkbox">
+					<label for="checkbox">Бренд 3</label>
 				</div>
 				<div class="radio">
-					<input type="radio" id="disc" name="disc">
-					<label for="disc">ДИСКИ</label>
+					<div class="imgradio">
+						<a href="#" class="radio">ДИСКИ</a>
+					</div>
 				</div>
 				<div class="name">
-					<ul>
-						<li><a href="№">Наменование 1</a></li>
-						<li><a href="№">Наменование 2</a></li>
-						<li><a href="№">Наменование 3</a></li>
-						<li><a href="№">Наменование 4</a></li>
-					</ul>
+					<input type="checkbox" id="checkbox">
+					<label for="checkbox">Бренд 1</label>
+					<input type="checkbox" id="checkbox">
+					<label for="checkbox">Бренд 2</label>
+					<input type="checkbox" id="checkbox">
+					<label for="checkbox">Бренд 3</label>
 				</div>
+				<button type="submit">ВЫБРАТЬ</button>
 			</aside>
 		</div>
 		<footer>
