--- a/6_zadanie/index.html
+++ b/6_zadanie/index.html
@@ -28,9 +28,9 @@
 					</div>
 				</div>
 				<div class="icons">
-					<a href="#"><img class="home" src="img/sprite.png" alt="icons"></a>
-					<a href="#"><img class="network" src="img/sprite.png" alt="icons"></a>
-					<a href=""><img class="mail" src="img/sprite.png" alt="icons"></a>
+					<a href="#"><img class="home" src="img/home.png" alt="icons"></a>
+					<a href="#"><img class="map" src="img/map.png" alt="icons"></a>
+					<a href=""><img class="mail" src="img/mail.png" alt="icons"></a>
 				</div>
 			</div>
 			<div class="headerimg">
@@ -54,7 +54,7 @@
 		</div>
 		<div class="forms">
 			<div class="leftform">
-				<form action="#" method="post">поиск по автомобилю - форма</form>
+				<form action="#" method="post">поиск по автомобилю</form>
 			</div>
 			<div class="centralform">
 				<form action="#" method="post">поиск шин</form>
@@ -179,11 +179,11 @@
 					</div>
 				</div>
 				<div class="radio">
-					<div class="imgradio">
+					<div class="imgradio_check">
 						<a href="#" class="radio">ШИНЫ</a>
 					</div>
 				</div>
-				<div class="name">
+				<div class="name_check">
 					<input type="checkbox" id="checkbox">
 					<label for="checkbox">Бренд 1</label>
 					<input type="checkbox" id="checkbox">
@@ -192,11 +192,11 @@
 					<label for="checkbox">Бренд 3</label>
 				</div>
 				<div class="radio">
-					<div class="imgradio">
+					<div class="imgradio_check">
 						<a href="#" class="radio">ДИСКИ</a>
 					</div>
 				</div>
-				<div class="name">
+				<div class="name_check">
 					<input type="checkbox" id="checkbox">
 					<label for="checkbox">Бренд 1</label>
 					<input type="checkbox" id="checkbox">
