--- a/6_zadanie/index.html
+++ b/6_zadanie/index.html
@@ -5,6 +5,7 @@
 	<title>HW_6_zazor.com.ua</title>
 	<link rel="stylesheet" href="css/reset.css"> 
 	<link rel="stylesheet" href="css/style.css">
+	<link href="http://allfont.ru/allfont.css?fonts=lucida-sans-unicode" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<div class="wrapper">
