--- a/6_zadanie/index.html
+++ b/6_zadanie/index.html
@@ -64,7 +64,7 @@
 				<form action="#" method="post">поиск дисков</form>
 			</div>
 		</div>
-		<div class="content"> <!-- =columns HW4 -->
+		<div class="content"> 
 			<aside class="left">
 				<div class="catalog">
 					<div class="img">
@@ -186,11 +186,11 @@
 				</div>
 				<div class="name_check">
 					<input type="checkbox" id="checkbox">
-					<label for="checkbox">Бренд 1</label>
+						<label for="checkbox">Бренд 1</label><br>
 					<input type="checkbox" id="checkbox">
-					<label for="checkbox">Бренд 2</label>
+						<label for="checkbox">Бренд 2</label><br>
 					<input type="checkbox" id="checkbox">
-					<label for="checkbox">Бренд 3</label>
+						<label for="checkbox">Бренд 3</label><br>
 				</div>
 				<div class="radio">
 					<div class="imgradio_check">
@@ -199,11 +199,11 @@
 				</div>
 				<div class="name_check">
 					<input type="checkbox" id="checkbox">
-					<label for="checkbox">Бренд 1</label>
+						<label for="checkbox">Бренд 1</label><br>
 					<input type="checkbox" id="checkbox">
-					<label for="checkbox">Бренд 2</label>
+						<label for="checkbox">Бренд 2</label><br>
 					<input type="checkbox" id="checkbox">
-					<label for="checkbox">Бренд 3</label>
+						<label for="checkbox">Бренд 3</label><br>
 				</div>
 				<button type="submit">ВЫБРАТЬ</button>
 			</aside>
