--- a/6_homework/index.html
+++ b/6_homework/index.html
@@ -78,10 +78,10 @@
 				</div>
 				<div class="name">
 					<ul>
-						<li><a href="№">Наменование 1</a></li>
-						<li><a href="№">Наменование 2</a></li>
-						<li><a href="№">Наменование 3</a></li>
-						<li><a href="№">Наменование 4</a></li>
+						<li><a href="#">Наменование 1</a></li>
+						<li><a href="#">Наменование 2</a></li>
+						<li><a href="#">Наменование 3</a></li>
+						<li><a href="#">Наменование 4</a></li>
 					</ul>
 				</div>
 				<div class="radio">
@@ -91,10 +91,10 @@
 				</div>
 				<div class="name">
 					<ul>
-						<li><a href="№">Наменование 1</a></li>
-						<li><a href="№">Наменование 2</a></li>
-						<li><a href="№">Наменование 3</a></li>
-						<li><a href="№">Наменование 4</a></li>
+						<li><a href="#">Наменование 1</a></li>
+						<li><a href="#">Наменование 2</a></li>
+						<li><a href="#">Наменование 3</a></li>
+						<li><a href="#">Наменование 4</a></li>
 					</ul>
 				</div>
 				<div class="radio">
@@ -104,10 +104,10 @@
 				</div>
 				<div class="name">
 					<ul>
-						<li><a href="№">Наменование 1</a></li>
-						<li><a href="№">Наменование 2</a></li>
-						<li><a href="№">Наменование 3</a></li>
-						<li><a href="№">Наменование 4</a></li>
+						<li><a href="#">Наменование 1</a></li>
+						<li><a href="#">Наменование 2</a></li>
+						<li><a href="#">Наменование 3</a></li>
+						<li><a href="#">Наменование 4</a></li>
 					</ul>	
 				</div>
 			</aside>	
