--- a/7-8_homework/index.html
+++ b/7-8_homework/index.html
@@ -40,11 +40,21 @@
 					</li>
 				</ul>
 			</menu>
-		<div>
-			<a href="#"><img src="img/arrowleft.png" alt="arrowleft"></a>
+		<div class="slider">
+			<div class="slider__arrowleft">
+				<a href="#"><img src="img/arrowleft.png" alt="arrowleft"></a>
+			</div>
 			<h1>Lorem Ipsum Dolor</h1>
-			<p>IT WILL MAKE ALL OF YOUR DREAMS COME</p>
-			<a href="#"><img src="img/arrowright.png" alt="arrowright"></a>
+			<h2>IT WILL MAKE ALL OF YOUR DREAMS COME</h2>
+			<div class="slider__arrowright">	
+				<a href="#"><img src="img/arrowright.png" alt="arrowright"></a>
+			</div>
+			<div class="pagination">
+				<div class="pagination__slide"></div>
+				<div class="pagination__slide"></div>
+				<div class="pagination__slide"></div>
+				<div class="pagination__slide"></div>
+			</div>
 		</div>
 		</div>
 		
